--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 
 <head>
 	<title>CV - Đỗ Văn Khánh</title>
-
 	<!-- Meta -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="author" content="Xiaoying Riley at 3rd Wave Media">
+	<!-- <meta name="description" content=""> -->
+	<!-- <meta name="author" content="Xiaoying Riley at 3rd Wave Media"> -->
 	<link rel="shortcut icon" href="favicon.ico">
-
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
 
@@ -20,9 +18,7 @@
 
 	<!-- Theme CSS -->
 	<link id="theme-style" rel="stylesheet" href="assets/css/devresume.css">
-
 </head>
-
 <body>
 
 	<div class="main-wrapper">
@@ -76,75 +72,98 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">Kinh nghiệm làm việc</h3>
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<p>Từng làm một vài dự án nhỏ khi đang là sinh viên đại học, tham gia các dự án làm việc nhóm của trường và giữ một vài vị trí quan trọng trong dự án như:</p>
+										<p>Từng làm một vài dự án nhỏ khi đang là sinh viên đại học, tham gia các dự án
+											làm việc nhóm của trường và giữ một vài vị trí quan trọng trong dự án như:
+										</p>
 									</div>
 									<div class="item-content row">
-										<p class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Xu hướng CN: ASP.NET Core</p>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">PXU | 12/2022 - 2/2023</div>										
-										<div class="item-content">										
-											<ul class="resume-list">												
+										<p class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Xu hướng CN: ASP.NET
+											Core</p>
+										<div
+											class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
+											PXU | 12/2022 - 2/2023</div>
+										<div class="item-content">
+											<ul class="resume-list">
 												<li>Vai trò: Coder.</li>
 											</ul>
-										</div>										
+										</div>
 									</div>
 									<div class="item-content row">
-										<p class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Phỏng vấn, tìm việc và làm việc</p>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">PXU | 12/2022 - 2/2022</div>										
-										<div class="item-content">		
-											<ul class="resume-list">												
+										<p class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Phỏng vấn, tìm việc
+											và làm việc</p>
+										<div
+											class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
+											PXU | 12/2022 - 2/2022</div>
+										<div class="item-content">
+											<ul class="resume-list">
 												<li>Vai trò: Intern.</li>
 											</ul>
-										</div>										
+										</div>
 									</div>
 									<div class="item-content row">
-										<p class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Ngôn ngữ lập trình C#</p>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">PXU | 10/2022 - 11/2022</div>										
-										<div class="item-content">										
-											<ul class="resume-list">												
+										<p class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Ngôn ngữ lập trình
+											C#</p>
+										<div
+											class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
+											PXU | 10/2022 - 11/2022</div>
+										<div class="item-content">
+											<ul class="resume-list">
 												<li>Vai trò: Leader.</li>
 											</ul>
-										</div>										
+										</div>
 									</div>
 									<div class="item-content row">
-										<p class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Quản lý dự án phần mềm</p>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">PXU | 8/2022 - 11/2022</div>										
-										<div class="item-content">										
-											<ul class="resume-list">												
+										<p class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Quản lý dự án phần
+											mềm</p>
+										<div
+											class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
+											PXU | 8/2022 - 11/2022</div>
+										<div class="item-content">
+											<ul class="resume-list">
 												<li>Vai trò: Leader.</li>
 											</ul>
-										</div>										
+										</div>
 									</div>
 									<div class="item-content row">
-										<p class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Phát triển Web với WordPress</p>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">PXU | 8/2022 - 11/2022</div>										
-										<div class="item-content">										
+										<p class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Phát triển Web với
+											WordPress</p>
+										<div
+											class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
+											PXU | 8/2022 - 11/2022</div>
+										<div class="item-content">
 											<ul class="resume-list">
 												<li>Thiết kế trang Web bán hàng.</li>
 											</ul>
-										</div>										
+										</div>
 									</div>
 									<div class="item-content row">
-										<p class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Lập trình di động</p>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">PXU | 8/2021 - 9/2022</div>										
-										<div class="item-content">										
-											<ul class="resume-list">											
+										<p class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Lập trình di động
+										</p>
+										<div
+											class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
+											PXU | 8/2021 - 9/2022</div>
+										<div class="item-content">
+											<ul class="resume-list">
 												<li>Vai trò: Coder.</li>
 											</ul>
-										</div>										
+										</div>
 									</div>
-								</div>					
+								</div>
 							</section><!--//work-section-->
 							<section class="project-section py-3">
-								<h3 class="text-uppercase resume-section-heading mb-4">Mục tiêu nghề nghiệp</h3>								
+								<h3 class="text-uppercase resume-section-heading mb-4">Mục tiêu nghề nghiệp</h3>
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Trở thành Full-Stack Developer</h4>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Trở thành
+											Full-Stack Developer</h4>
 										<div
-											class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end"></div>
+											class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
+										</div>
 									</div>
 									<div class="item-content">
 										<p><br>
-											Để có thể đạt được mục tiêu của mình thì em cần phải củng cố các kiến thức liên quan
+											Để có thể đạt được mục tiêu của mình thì em cần phải củng cố các kiến thức
+											liên quan
 											như:
 											<br>- Nắm chắc kiến thức về front-end như HTML, CSS, JavaScript và một vài
 											ngôn ngữ khác để hỗ trợ tốt hơn cho công việc của mình.
@@ -155,7 +174,7 @@
 											hosting để triển khai sản phẩm của mình.
 											<br>- Củng cố một số kỹ năng như: sáng tạo trong công việc, phân tích các
 											vấn đề liên quan , linh động giải quyết các vấn đề phát sinh trong quá trình
-											làm việc và đáp ứng đúng thời gian khi thực hiện đồ án.											
+											làm việc và đáp ứng đúng thời gian khi thực hiện đồ án.
 										</p>
 									</div>
 								</div><!--//item-->
@@ -183,7 +202,8 @@
 									<!-- <h4 class="item-title">Technical</h4> -->
 									<ul class="list-unstyled resume-skills-list">
 										<li class="mb-2">HTML, CSS, JavaScript</li>
-										<li class="mb-2">Python, PHP<li>
+										<li class="mb-2">Python, PHP
+										<li>
 										<li class="mb-2">ASP.NET</li>
 										<li class="mb-2">SQL Server, MySQL</li>
 										<li class="mb-2">C#</li>
@@ -201,7 +221,7 @@
 									<li class="mb-2">
 										<div class="font-weight-bold">Ít nói</div>
 										<div class="text-muted"></div>
-									</li>									
+									</li>
 									<li class="mb-2">
 										<div class="font-weight-bold">Lịch sự</div>
 										<div class="text-muted"></div>
@@ -209,11 +229,11 @@
 									<li class="mb-2">
 										<div class="font-weight-bold">Khiêm tốn</div>
 										<div class="text-muted"></div>
-									</li>	
+									</li>
 									<li class="mb-2">
 										<div class="font-weight-bold">Biết lắng nghe</div>
 										<div class="text-muted"></div>
-									</li>									
+									</li>
 								</ul>
 							</section><!--//education-section-->
 							<section class="skills-section py-3">
@@ -244,19 +264,7 @@
 					</ul>
 				</div><!--//resume-footer-->
 			</article>
-
 		</div><!--//container-->
-
-		<!-- <footer class="footer text-center py-4">
-					<!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
-		<small class="copyright text-muted">Designed with <span class="sr-only">love</span><i class="fas fa-heart"></i>
-			by <a class="theme-link" href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for
-			developers</small>
-		</footer> -->
-
 	</div><!--//main-wrapper-->
-
-
 </body>
-
 </html>
